--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Flask #Flask library
 requests #requests library
-prometheus_flask_exporter #prometheus library
+prometheus_flask_exporter #prometheus_flask_exporter library
